# python-architecture-example

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
alphagram/: Chart.yaml  values.yaml
alphagram/templates/: deployment.yaml
app/: alembic.ini  config.py  main.py  models.py  repository.py  tables.py
app/migrations/: env.py
app/migrations/versions/: 2022_05_05_1513-8ae09a3d4fa7_.py
dev/: start.sh
tests/: conftest.py  test_python_architecture_example.py  utils.py
tests/domain/: test_user.py
tests/repository/: test_repository.py  test_user_repository.py
