[tool.poetry]
name = "python-architecture-example"
version = "0.1.0"
description = ""
authors = ["sawaca96 <sawaca96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]
mypy = "0.942"
isort = "^5.10.1"
flake8 = "4.0.1"
black = "22.3.0"
pytest = "^7.1.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
